Re-did most of the structure of the application. The functions are located in the function folder and exported to the app.js to avoid cluttering. Also, the pug template is complete

--- a/htmls/index2.html
+++ b/htmls/index2.html
@@ -59,8 +59,8 @@
             <img src="images/m-spore.png" />
           </div>
 
-          <textarea class="circle--textarea--input" placeholder="What's happening?" id="tweet-textarea"></textarea>
-          <strong class="app--tweet--char" id="tweet-char">140</strong>
+          <textarea class="circle--textarea--input" placeholder="What's happening?" id="-textarea"></textarea>
+          <strong class="app----char" id="tweet-char">140</strong>
         </div>
         <div class="circle--fluid--cell align-bottom">
           <button class="button-primary">Tweet</button>
